# crypto_aggregator

./: .gitignore  README.md  get_ethereum_balance.ipynb  get_ethereum_balance.py  helpers.py  main.py  pyproject.toml  test.ipynb  test.py
.github/workflows/: autopy-lot.yml
app/: helpers.py  main.py  models.py
files/: example_portfolio.json
